Use our own OpenSearch configuration files
For OpenSearch 3, a new jvm option is required. If OpenSearch is installed by homebrew, the default configuration is copied and never touched again. This means the new jvm option isn’t automatically added, causing OpenSearch to no longer run after being upgraded to 3 from a previously installed 2.*.